# standards

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
adr/: ADR-001-pytest-como-padrao-testes.md  ADR-002-ruff-mypy-strict-python.md  ADR-003-ci-cd-github-actions.md  ADR-004-docker-compose-padrao.md  ADR-005-git-hygiene.md  ADR-006-taxonomia-documentacao.md  ADR-007-blueprints-reutilizaveis.md  ADR-008-pre-commit-hooks.md  ADR-009-arquitetura-agentes-opensquad.md  ADR-010-cobertura-minima-80.md
aurum/: app.py  checks.py  engine.py  fixer.py  models.py  reporter.py
blueprints/: blueprint-agent-system.yaml  blueprint-ai-agent.yaml  blueprint-data-pipeline.yaml  blueprint-fullstack-web.yaml  blueprint-landing-page.yaml  blueprint-python-tool.yaml  blueprint-rag-system.yaml
checklists/: CHECKLIST-novo-projeto.md  CHECKLIST-padrao-ouro.md
specs/: SPEC-001-pipeline-testes-python.md  SPEC-002-linting-type-safety-python.md  SPEC-003-workflow-ci-cd.md  SPEC-004-docker-compose-padrao.md  SPEC-005-git-github-boas-praticas.md  SPEC-006-documentacao-tecnica.md  SPEC-007-blueprint-data-pipeline.md  SPEC-008-blueprint-fullstack-web.md  SPEC-009-blueprint-agent-system.md  SPEC-010-automacao-pre-commit.md  SPEC-011-blueprint-rag-system.md  SPEC-012-blueprint-ai-agent.md  SPEC-013-blueprint-landing-page.md  SPEC-014-blueprint-python-tool.md
templates/: .env.example  .gitignore  .pre-commit-config.yaml  ADR_TEMPLATE.md  CLAUDE.md  Dockerfile  Makefile  SPEC_TEMPLATE.md  docker-compose.yml  pyproject.toml
templates/.github/workflows/: ci.yml
tests/: conftest.py  test_standards.py
