# ============================================================
# pyproject.toml — Python project template
# standards/templates/pyproject.toml
# ============================================================
[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["app", "src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
]

# ============================================================
# Ruff (lint + format)
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", "D407", "D416",
    "ANN101", "ANN102",
    "CPY001", "TD002", "TD003",
    "ERA001", "FBT001", "FBT002",
    "PLR0913",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "ANN201", "D100", "D101", "D102", "PLR2004"]

# ============================================================
# Mypy
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests/*"]
ignore_errors = true
